# zenzic-action

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .zenzic.local.toml.example  .zenzic.toml  CHANGELOG.md  CONTRIBUTING.it.md  CONTRIBUTING.md  LICENSE  README.it.md  README.md  RELEASE.it.md  RELEASE.md  REUSE.toml  SECURITY.md  ZENZIC_BRAIN.md  _tmp_pr_description.txt  action.yml  justfile  noxfile.py  package.json  pyproject.toml  requirements.txt  zenzic-action-wrapper.sh  zenzic-results.sarif  zenzic.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  gate-bypass-postmortem.md  security_vulnerability.yml
.github/agents/memory/: handoff_ledger.md
.github/workflows/: compliance.yml  release.yml  secret-scan.yml  security-posture.yml  self-check.yml
changelogs/: README.md  v1.x.md
scripts/: bump-version.sh  map_action.py  pin_core.py
tests/fixture/: .zenzic.toml  README.md
